fix(css): add box-sizing:border-box for firefox
Fixes the extra space on the right as well as the icons looking wrong

closes #190

--- a/sdk/src/styling/base.scss
+++ b/sdk/src/styling/base.scss
@@ -2,6 +2,7 @@
 *, *:after, *:before {
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
+    -moz-box-sizing: border-box;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     -webkit-user-select: none;
     -webkit-touch-callout: none;
